center flex items in flex class ,make header fixed on top, update gap in header_nav

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 .flex {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: flex-start;
 }
 .flex--column {
@@ -22,7 +22,7 @@ body {
 .header__nav {
   margin-left: 2.5em;
   list-style-type: none;
-  gap: 38px;
+  gap: 28px;
   font-family: "Lato", sans-serif;
   font-weight: 600;
   align-items: center;
@@ -33,6 +33,9 @@ body {
   min-height: 100vh;
 }
 header {
+  position: fixed;
+  top: 0px;
+
   gap: 5em;
   padding-top: 1.25em;
 }
@@ -141,7 +144,6 @@ a {
 .service {
   margin-bottom: 30px;
   color: #6754e2;
-  font-family: "ProximaNovaR", Sans-serif;
   font-size: 20px;
   font-weight: 500;
   font-style: normal;
